# aki-txpr-macro

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
fixtures/: target-list.txt
src/: lib.rs
tests/: test.rs
