[package]
name = "aki-txpr-macro"
version = "0.1.2"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = "the more easy to use libaki-*."
keywords = ["pipe", "fifo", "filter", "threads"]
categories = ["text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/aki-akaguma/aki-txpr-macro"

[features]
default = []

[dependencies]
runnel = "0.3"
anyhow = "1.0"

[dev-dependencies]
aki-gsub = "0.1"
aki-mcolor = "0.1"
aki-mcycle = "0.1"
aki-mline = "0.1"
aki-resort = "0.1"
aki-stats = "0.1"
aki-unbody = "0.1"
aki-xcat = "0.1"
aki-xtee = "0.1"
